Seventh Commit :bookmark:

--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
     </script>   
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Festa Vip</h1>
+    <h2> Bem vindo a festa Senhor(a): </h2>
+    <p>
+         Digite seu nome: <input id="author">
+    </p>
+    <h2> Quem te convidou para a festa? </h2>
+    <p>
+        Nome: <input id="friend">
+    </p>
+    <button id="loading" onclick="botaoAlterar()"> Verificar se posso entrar </button>
+    <h2> Você está permitido a entrar? </h2>
+    <p id="mudando"> Loading... </p>
 </body>
